Bug 938806 - Handle errors better in GonkFMRadio, r=dhylands